...
                    callbacks.onLoadMore()
                }
            }
        }
    }

    Box(modifier = modifier.fillMaxSize().testTag("search_screen")) {
        Column(modifier = Modifier.fillMaxSize()) {
            SearchField(
                searchText = searchText,
                onTextChange = {
                    searchText = it
                    callbacks.onSearchQueryChanged(it)
...
